--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container-video">
+    <img src="filecn.png" alt="" id="logocn">
+    <img src="filepplg.png" alt="" id="logopplg">
+    <div id="container-video">    
     <video id="video"muted autoplay></video>
     <script src="face-api.min.js"></script>
     <script src="script.js"></script>
-    </div>
+</div>
 </body>
-</html>
+</html> 
+
